; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_isidle.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_isidle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_fsm = type { i64, i32 }

@NN_FSM_STATE_IDLE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_fsm_isidle(%struct.nn_fsm* %0) #0 {
  %2 = alloca %struct.nn_fsm*, align 8
  store %struct.nn_fsm* %0, %struct.nn_fsm** %2, align 8
  %3 = load %struct.nn_fsm*, %struct.nn_fsm** %2, align 8
  %4 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @NN_FSM_STATE_IDLE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.nn_fsm*, %struct.nn_fsm** %2, align 8
  %10 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %9, i32 0, i32 1
  %11 = call i32 @nn_fsm_event_active(i32* %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  br label %14

14:                                               ; preds = %8, %1
  %15 = phi i1 [ false, %1 ], [ %13, %8 ]
  %16 = zext i1 %15 to i64
  %17 = select i1 %15, i32 1, i32 0
  ret i32 %17
}

declare dso_local i32 @nn_fsm_event_active(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
